# stellAIverse-contracts

./: Cargo-test.toml  Cargo.toml  GAS_OPTIMIZATION_REPORT.md  SOLUTIONS_IMPLEMENTATION_REPORT.md  deploy_testnet.sh  run-ci-tests.sh  test_solutions.sh
.github/workflows/: ci.yml  formal-verification.yml
contracts/affiliate-bonuses/src/: lib.rs
contracts/amm/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/bridge-manager/src/: lib.rs
contracts/compliance-integration/: Cargo.toml
contracts/compliance-integration/src/: lib.rs
contracts/credit-score-nft/: Cargo.toml
contracts/credit-score-nft/src/: lib.rs  test.rs
contracts/execution-hub/src/: lib.rs
contracts/governance/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/kyc/src/: validation.rs
contracts/lifecycle-manager/src/: test.rs
contracts/marketplace/src/: lib.rs  storage.rs  test_bid_history.rs  test_dynamic_fee_enhancement.rs
contracts/metrics-aggregator/src/: lib.rs  storage.rs
contracts/nft-lending/: Cargo.toml
contracts/nft-lending/src/: lib.rs
contracts/nonce/: lib.rs
contracts/nonce/src/: gov_params.rs  nonce_guard.rs  rate_limit.rs
contracts/oracle/src/: lib.rs
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: lib.rs
contracts/referral-rewards/src/: lib.rs
contracts/risk-evaluation/: Cargo.toml
contracts/risk-evaluation/src/: lib.rs
contracts/staking-bonuses/src/: lib.rs
contracts/threshold-agent/src/: lib.rs
contracts/transaction-coordinator/src/: lib.rs
lib/src/: chain.rs  errors.rs  rbac.rs  types.rs
scratch/: check_braces.py
scripts/: build-optimized-wasm.sh
shared/src/: lib.rs
tests/: gov_param_tests.rs  nonce_tests.rs  rate_limit_tests.rs
