[workspace]
members = [
    "contracts/governance",
    "contracts/staking-bonuses",
    "contracts/compliance-integration",
    "contracts/referral-rewards",
    "lib",
    "shared",
]

resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = "abort"
debug = false
strip = "symbols"
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug = true
strip = "none"

[workspace.dependencies]
soroban-sdk = "22.0.10"
