[workspace]
members = [
    "contracts/bug-bounty",
    "contracts/affiliate-bonuses",
    "contracts/credit-scoring-waitlist",
    "contracts/agent-nft",
    "contracts/agent-token",
    "contracts/amm",
    "contracts/bridge-manager",
    "contracts/compliance-integration",
    "contracts/credit-score-nft",
    "contracts/evolution",
    "contracts/execution-hub",
    "contracts/faucet",
    "contracts/governance",
    "contracts/identity-did",
    "contracts/lifecycle-manager",
    "contracts/marketplace",
    "contracts/metrics-aggregator",
    "contracts/oracle",
    "contracts/prediction-market",
    "contracts/referral-rewards",
    "contracts/risk-evaluation",
    "contracts/staking-bonuses",
    "contracts/multisig-waitlist",
    "contracts/threshold-agent",
    "contracts/transaction-coordinator",
    "contracts/verifiable-credentials",
    "contracts/waitlist-tokens",
    "lib",
    "shared",
]

resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = "abort"
debug = false
strip = "symbols"
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug = true
strip = "none"

[profile.dev]
codegen-units = 16
opt-level = 0
lto = false
debug = true
incremental = true

[profile.test]
codegen-units = 16
opt-level = 1
lto = false
debug = true
incremental = true

# Build parallel configuration
[build]
jobs = 8

[workspace.dependencies]
soroban-sdk = "22.0.10"
