[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.11", default-features = false }
stellai_lib = { path = "../../lib" }

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = "abort"
debug = false
strip = "symbols"
